// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Canvas stimulus HTML generation renders HTML for course-completion--requesting-a-transcript/course-feedback 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Course Feedback</h2>
<div>
        
        
        <div id="intro">
            <div><p>Thank you for taking this course!  Let us know what you think about it.<br /></p></div>
        </div>
    </div><div><div>Click on <a href="https://svhs.co/feedback-student-lms/?CourseID=469&amp;CourseName=ENG09_pt%201&amp;StudentEmail=ljchavez417%40gmail.com&amp;FirstName=Lisa&amp;LastName=Jones&amp;City=Austin">Course Feedback</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for course-completion--requesting-a-transcript/request-a-transcript 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Request a Transcript</h2>
<div>
        
        
        <div id="intro">
            <div><p>Notify your school that you have completed your course. Send them a transcript by email or mail. A transcript will list all the courses you have completed and those in progress. <br /></p></div>
        </div>
    </div><div><div>Click on <a href="https://svhs.co/request-transcript/?userid=lisajones">Request a Transcript</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for final-exam/reattempt-up-to-2-unit-tests 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                <div>
    
</div><div>
 
	
<div>
    <div>
        <h1>English 09, Part 1</h1>
    </div>
</div><h4><b>Unit Test Reattempts</b></h4><a href="https://lms.svhs.co/course/view.php?id=469">Return to Course</a><p id="txtmsg"> <b> You have already used all your eligible reattempts. <br /> <br /> Use the Practice Final to prepare for the Final, and it will help you identify lessons in the course that you might need to review. Good luck with your Final Exam. </b> </p>



 
<br />
<br />











<div id="example_wrapper"><div id="example_length"><label>Show <select><option>10</option><option>25</option><option>50</option><option>100</option></select> entries</label></div><div id="example_filter"><label>Search:</label></div><table id="example">
  <thead>
      <tr><th scope="col" rowspan="1" colspan="1">ID</th><th scope="col" rowspan="1" colspan="1">Unit Test Name</th><th scope="col" rowspan="1" colspan="1">Requested Date</th></tr>
    </thead>
      <tbody>	
	  				  <tr><td colspan="3">No data available in table</td></tr></tbody>
				  </table><div id="example_info">Showing 0 to 0 of 0 entries</div><div id="example_paginate"><a id="example_previous">Previous</a><a id="example_next">Next</a></div></div>	
</div>            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for how-to-take-this-course/ask-the-teacher 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Ask The Teacher</h2>
<div>
        
        
        <div id="intro">
            <div><p>Meet your teacher for this course and ask a question.</p>
<p><b>Need help with the course?</b> We offer online tutoring; find more details about it <a href="https://svhs.co/tutoring/" target="_blank">here</a>.</p></div>
        </div>
    </div><div><div>Click on <a href="https://svhs.co/asktheteacher-tammy/?firstname=Lisa&amp;lastname=Jones&amp;email=ljchavez417%40gmail.com&amp;course=English%2009%2C%20Part%201&amp;courseid=469&amp;studentid=105531">Ask The Teacher</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for how-to-take-this-course/course-instructions 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Course Instructions</h2>
<div>
        
        
</div><div><div>Click on <a href="https://svhs.co/pdf/CourseInstructions.pdf">Course Instructions</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for how-to-take-this-course/how-this-course-works--suggested-timeline 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>How This Course Works  &amp; Suggested Timeline</h2>
<div>
        
        
</div><div><div><div><p>SVHS courses are broken down into units; we recommend that you focus on each unit at a time; don't move on to the next unit until you have completed all the quizzes, submitted your unit assignment, and taken your unit test.  Focusing on each unit
    will help you remember it better.  Do the unit assignment before the unit test; the assignment requires you to apply the information you learned in the unit, and you'll be better prepared for the test.  </p>

<p>Here is a brief overview of how our courses work:</p>
<div></div>
<h5>Suggested Timeline For Taking The Course</h5>

<p>All our courses are self-paced; students can take them over a minimum of 30 days or a maximum of a year. Many students take the course over the summer, while others take it over a semester. The timeline below assumes the course is being taken over a regular semester of 18 weeks. If you want to take this over the summer, adjust the timeline, do 2-3 weeks of work per week, and complete the course in 6-9 weeks.</p><p>To complete this course over one semester (18 weeks), you should complete a unit every 2-3 weeks and spend 4 hours a week on the course. Remember, every student is different; increase your weekly study time if you fall behind schedule. The course will expire a year after enrollment. You may petition for an extension; a $50 fee will apply if approved. If you don't complete the course, you can request to drop it.</p>



<p><strong>Important </strong>- If your school gives you a date for the course to be completed, you <u>must</u> work to their deadline.  </p>
<p>Here is our suggested timeline for completing the course. We recommend you <strong><a href="https://svhs.co/pdf/Eng9P1_SuggestedTimeline1.pdf" target="_blank">print it</a></strong> and stick it on the front cover of your notebook, to help you
    stay on track.</p>

<table>
    <tbody>
        <tr>
            <td>
                
            </td>
            <td>
                <strong>Activity</strong>
            </td>
            <td>
                <strong>Reading</strong>
            </td>
        </tr>
        <tr>
            <td><strong>
                    Week 1
                </strong></td>
            <td>
                Lessons 1.1 to 1.3
            </td>
            <td><em>The Most Dangerous Game</em>;<br /><em>The Cask of Amontillado</em></td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 2</strong></p>
            </td>
            <td>
                <p>Lessons 1.4 to 1.6</p>
            </td>
            <td>
                <p>"Everyday Use"</p>
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 3</strong></p>
            </td>
            <td>
                <p>Unit 1 Assignment &amp; Test</p>
            </td>
            <td>
                <p>Start <em>American Born Chinese - </em>Chapters 1-4</p>
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 4</strong></p>
            </td>
            <td>
                <p>Lessons 2.1 to 2.2</p>
            </td>
            <td>
                <p>Finish <em>American Born Chinese - </em>Chapters 5-9</p>
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 5</strong></p>
            </td>
            <td>
                <p>Lessons 2.3 to 2.6</p>
            </td>
            <td>
                
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 6</strong></p>
            </td>
            <td>
                <p>Unit 2 Assignment &amp; Test</p>
            </td>
            <td>
                
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 7</strong></p>
            </td>
            <td>
                <p>Lessons 3.1 to 3.3</p>
            </td>
            <td>
                
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 8</strong></p>
            </td>
            <td>
                <p>Lessons 3.4 to 3.6</p>
            </td>
            <td>
                
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 9</strong></p>
            </td>
            <td>
                <p>Unit 3 Assignment &amp; Test</p>
            </td>
            <td>
                
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 10</strong></p>
            </td>
            <td>
                <p>Lessons 4.1 to 4.2</p>
            </td>
            <td>
                
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 11</strong></p>
            </td>
            <td>
                <p>Lessons 4.3 to 4.4</p>
            </td>
            <td>
                
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 12</strong></p>
            </td>
            <td>
                <p>Unit 4 Assignment &amp; Test</p>
            </td>
            <td>
                <p>Read <em>Romeo and Juliet</em> Act I</p>
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 13</strong></p>
            </td>
            <td>
                <p>Lessons 5.1 to 5.2</p>
            </td>
            <td>
                <p>Read <em>Romeo and Juliet </em>Act II</p>
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 14</strong></p>
            </td>
            <td>
                <p>Lesson 5.3 </p>
            </td>
            <td>
                <p>Read <em>Romeo and Juliet </em>Act III</p>
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 15</strong></p>
            </td>
            <td>
                <p>Lesson 5.4</p>
            </td>
            <td>
                <p>Read <em>Romeo and Juliet </em>Act IV</p>
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 16</strong></p>
            </td>
            <td>
                <p>Lesson 5.5</p>
            </td>
            <td>
                <p>Read <em>Romeo and Juliet </em>Act V </p>
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 17</strong></p>
            </td>
            <td>
                <p>Unit 5 Assignment &amp; Test</p>
            </td>
            <td>
                
            </td>
        </tr>
        <tr>
            <td>
                <p><strong>Week 18</strong></p>
            </td>
            <td>
                <p><a title="Practice Final" href="https://lms.svhs.co/mod/quiz/view.php?id=39777">Practice Final</a> &amp; Final Exam</p>
            </td>
            <td>
                
            </td>
        </tr>
    </tbody>
</table>



<br />* <a href="https://svhs.co/pdf/Eng9P1_SuggestedTimeline1.pdf" target="_blank">Print version</a><br />
<p>Please see our <a href="https://svhs.co/policies/" target="_blank">Policies</a> page for more details on our extension policy (2.6).<br /></p></div></div><div>Last modified: Saturday, 3 May 2025, 6:15 PM</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for how-to-take-this-course/learning-objectives--standards-met-by-this-course 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Learning Objectives &amp; Standards Met By This Course</h2>
<div>
        
        
        <div id="intro">
            <div><p>Link to page describing the learning objectives and standards met.<br /></p></div>
        </div>
    </div><div><div>Click on <a href="https://svhs.co/pdf/English09_Pt1-Outline_Objectives.pdf">Learning Objectives &amp; Standards Met By This Course</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for how-to-take-this-course/submitting-your-assignments 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Submitting Your Assignments</h2>
<div>
        
        
</div><div><div>Click on <a href="https://svhs.co/submitting-assignments/">Submitting Your Assignments</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-1--short-fiction---literary-elements/1-1-plot-structure 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>1.1 Plot Structure</h2>
<div>
        
        
</div><div><div><div><p>If you haven't done so already, download the <strong><a href="https://docs.google.com/document/d/1KuPX0JY5iCBDxBC_DjQ1xmQzzJFw6wSYftLZ-_rkhy0/copy" target="_blank">Study Guide</a></strong> for unit 1, you can open it in Google Docs. Use the study guide to make notes; it will help you identify and practice the key concepts in the unit. The study guide is available as a <a href="https://svhs.co/pdf/English09-Part1_Unit1StudyGuide.pdf" target="_blank"><strong>PDF</strong></a> too.</p>

<p>Greetings from Silicon Valley High School!  Welcome to English 9.  This course is designed to make you a proficient reader, writer, and thinker at the high school level.  We begin with the short story...</p>
<h4>The Short Story<br /></h4>
<p>The modern short story is a descendant of ancient Greek mythology and those Brothers Grimm fairy tales passed orally from generation to generation: stories best told at night around a fire, whose purposes were to create a sense of amazement.  As
    such, the modern short story took on Gothic elements: themes of bloody revenge, bitter ironies, and disturbing endings.  Instead of heroes and gods being the focus, however, most short fiction champions the common character, especially voices
    of the "loner," "loser," or "outcast"--those on the outside or fringes of society.</p>
<p>The "Father of the American short story," Edgar Allan Poe, formalized the short fiction genre at the end of the Romantic Period and the beginning of the Victorian Era, a time when the United States was engaged in bloody expansion (against Mexico), genocide
    (against Native Americans), and slavery (on Southern plantations). Poe's tales mirrored the violence in America, the beauty of Romantic language, and the simplicity of Realism's prose.  For Poe, the purpose of the short story was to return to
    that ancient oral culture: to catch lightning in a bottle in one reading.</p>
<p>Unlike longer works, short fiction delivers a knockout punch.  Short stories compress time by colliding all narrative elements at high speed: <strong>plot</strong> (narrative conflict), <strong>setting</strong> (time and place), <strong>characterization</strong> (protagonists against antagonists), <strong>point of view</strong> (narrator's perspective), and <strong>theme</strong> (author's message).</p>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://blog.reedsy.com/guide/story-structure/heros-journey/" target="_blank">"The Hero's Journey" plot structure</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-1--short-fiction---literary-elements/1-2-richard-connell----the-most-dangerous-game- 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>1.2 Richard Connell - "The Most Dangerous Game"</h2>
<div>
        
        
</div><div><div><div><h5>The Adventure Short Story</h5>
<p>Adventure fiction is closely related to the genres of <strong>epic</strong> and <strong>romance</strong>, where there are traditional <strong>archetypes</strong>, "stock" characters who are easily distinguishable as good or evil.  </p>
<p>"The Most Dangerous Game," is a classic example of <strong>escape literature</strong> (purely for entertainment) in that there is prolonged conflict between the protagonist (Rainsford) and antagonist (Zaroff).  Even though both Rainsford and Zaroff
    are master hunters and <strong>foils</strong> (reflections of each other), Zaroff's lust for blood crosses the boundaries of "civilized" society, according to Connell.</p>

<p>"The Most Dangerous Game" is escapist literature at its finest.  Most high school freshman literature books begin with this story because it is high interest and easy to analyze in terms of story elements and a plot diagram.  Though a great
    story, it is essentially a warm-up to more sophisticated texts.  Connell presents Rainsford as an archetypal "action hero."  Or, is he an anti-hero?  Ironically, the story anticipates the future Cold War tensions between Russia (U.S.S.R.)
    and the U.S.A. that would dominate geopolitics for the next century.  The ending is open-ended: does Rainsford learn from his mistakes, or does he become like Zaroff?</p>

<h4>Assignment:  Read "<a href="https://www.classicshorts.com/stories/danger.html" target="_blank">The Most Dangerous Game</a>" by Richard Connell.</h4>




<div></div>

<div></div>

<div></div>


<h4>Reading:</h4>
<p><a href="https://book-genres.com/adventure-genre-definition/" target="_blank">Adventure Fiction (genre)</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-1--short-fiction---literary-elements/1-3-edgar-allan-poe----the-cask-of-amontillado- 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>1.3 Edgar Allan Poe - "The Cask of Amontillado"</h2>
<div>
        
        
</div><div><div><div><h4>The Gothic Short Story<br /></h4>

<p>Poe uses many <strong>Gothic</strong> elements to create this masterpiece of the macabre.  First, he uses a superb <strong>narrator</strong>, Montressor, who shows vast intelligence, cunning, and manipulation.  His plan of revenge is clearly
    premeditated, but he never divulges the offense Fortunado committed against him and his family, providing no clear motive. </p>
<p>Secondly, Poe adds suspense through <strong>setting</strong>: the ancient Italian city, the festival of Carnival, which begins with <em>Mardi Gras</em> ("Fat Tuesday"), the catacombs, the niter covering the walls, the niche, chain and stone wall. 
    Most Gothic horror stories are set in haunted houses; here, we have an underground network of them: the old burial grounds beneath the city instill fear in the soul of any in Christendom.</p>
<p>Poe's primary device used to create suspense is <strong>foreshadowing</strong>.  Montressor reveals his coat of arms to Fortunado, the snake biting the heal that steps on it--clear <strong>symbols</strong> of revenge.  He shows the trowel to
    him and gives him a phony Masonic gesture.  And then there's the amontillado, one of the greatest red herrings in literature.</p>
<p>Because "The Cask of Amontillado" is a<strong> frame story </strong>(a story whose primary action is told in <strong>flashback</strong>), the ending of the <strong>inner story</strong> of revenge is never in doubt.  We know Fortundo is being
    lured to his doom through Poe's use of masterful <strong>dramatic irony </strong>(when the audience knows what will happen before Fortunato).  But, the motive for the murder is never given, so the <strong>outer story</strong> of confession
    seems uncharacteristically hollow and open-ended.  Gothic narrators usually relish in how fitting the revenge is to the original crime, but not Montressor.  His madness is like the great villains (like "the Joker"),
    as he is an agent of inexplicable chaos.  </p>

<h4>Assignment:  Read "<a href="https://www.owleyes.org/text/cask-amontillado/read/the-cask-of-amontillado#root-2" target="_blank">The Cask of Amontillado</a>" by Edgar Allan Poe.</h4>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.thoughtco.com/gothic-literature-2207825" target="_blank">What is Gothic literature?</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-1--short-fiction---literary-elements/1-4-characterization-and-setting 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>1.4 Characterization and Setting</h2>
<div>
        
        
</div><div><div><div><h4>Characterization<br /></h4>

<p><span>In short stories, most protagonists and antagonists are <strong>foils,</strong> or reflections of each other.  A <strong>f</strong></span><strong>oil </strong><span>is a </span><span>"leaf" of bright metal (like tin foil) placed under a jewel to increase its brilliance.  </span><span>Traditionally, a foil is a minor character who, through comparison and contrast, serves to highlight the brilliance of the protagonist. Foils are not necessarily opposites.</span></p>
<p>For example, Rainsford and Zaroff from "The Most Dangerous Game" are foils.  More specifically, Zaroff is a foil for Rainsford.  Whereas Rainsford is a traditional hunter of animals, Zaroff is the extreme version of the hunter: a murderous recluse bored of hunting animal prey.  Whereas Rainsford cares not for the feelings of his animal prey, Zaroff cares not for the feeling of his human prey. </p>
<p>Montressor and Fortunado from "The Cask of Amontillado" are foils in a similar way.  Just as Zaroff hunts Rainsford, so too Montressor "hunts" Fortunado, luring him into his catacombs, but with a smile.  Whereas Rainsford and Zaroff are foreigners and strangers, Montressor and Fortunado are local acquaintances, wine connoisseurs, and festival-goers.  This mirror-image effect illuminates the brilliance of each set of characters: Rainsford's superior hunting abilities and Montressor's devious plan of revenge are both accentuated by contrasts.</p>
<h4>Setting</h4>The settings of each short story play as significant a role as its characters.  In fact, each story's setting is like a character.  In terms of <strong>place</strong>, Shiptrap Island and the Montressor catacombs are living graveyards,
haunted by their twisted, murderous owners.  <br /><br /><strong>Time</strong> plays a more crucial role in "The Cask of Amontillado," however. Since Montressor tells his story in flashback nearly fifty years after it happened, we must imagine him as a smug, vengeful old man.  If we believe his tale, the reader must assume that Montressor must be near death himself; otherwise, why would he finally confess his murder? <br /><br />Together, time and place give setting a context that must be considered first in
any literary discussion. When and where a story takes place reveals the history of the narrative and provides key artifacts (symbols) about the motives of both narrator and storyteller.  <br />



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4><p><a href="https://literarydevices.net/setting/" target="_blank">Setting in Literature</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-1--short-fiction---literary-elements/1-5-alice-walker----everyday-use- 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>1.5 Alice Walker - "Everyday Use"</h2>
<div>
        
        
</div><div><div><div><h4>The Cinderella Myth Retold<br /></h4>

<p>"Everyday Use" is a modern version of the classic Cinderella <strong>fairy tale</strong>.  Walker tells us of two sisters, one of whom is like Cinderella, a humble domestic servant; the other is an entitled wayward sister.  Instead of fighting
    over a glass slipper, the object of desire is a set of <span>quilts</span>, handmade family <strong>heirlooms</strong> dating back to the Civil War.  Instead of a prince seeking a future wife, the family <strong>matriarch</strong>, Mama (Mrs.
    Johnson), is seeking to christen one of her daughters as her successor and the next leader of the family.  </p>

<p>Maggie, the younger sister, is like <strong>Cinderella</strong> in terms of status, not looks.  She is homely, physically slow, none too bright, and physically scarred from the house fire.  Her mother, Mrs. Johnson, knows that she will have
    a hard time marrying, but she knows just who it will be.  Maggie feels undeserving of her mother's attention and heirlooms (the quilts and butter churn).  Next to her sister, she cowers like an ugly duckling. </p>

<p>Dee, the older sister, is like one of Cinderella's stepsisters.  She is all that Maggie is not: mobile, attractive, educated, confident.  She mistreats her sister by making her feel inferior and worthless.  She feels her birthright
    gives her a sense of entitlement to the <span><span>quilts</span></span> and butter churn, but instead of using them for their everyday intended uses, she wants to transform them into <strong>artifacts</strong> of the past, using her heritage as "cultural
    capital."  By changing her name to "Wangero," wearing "borrowed robes," and embracing the fad movement of <strong>black nationalism</strong>, her mother and sister barely recognized her.</p>

<p>"Everyday Use" takes place in 1973 and the height of the Black Nationalist movement in which several African-Americans like Dee Johnson were changing their "slave names" (given to them by white masters) to Muslim ones.  Lew Alcindor became Karim Abdul-Jabar, following the likes of Cassius Clay (Muhammad Ali) and Malcolm Little (first Malcolm X, and then El-Hajj Malik El-Shabazz).</p>
<p>Who will be the next matriarch?  Will Mrs. Johnson give the quilts to Dee or Maggie?  Will the heirlooms be given their "everyday use" or become museum pieces?</p>

<h5>Assignment:  Read "<strong><a href="https://harpers.org/archive/1973/04/everyday-use/">Everyday Use"</a></strong> by Alice Walker.
</h5>


<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.coursehero.com/lit/Everyday-Use/symbols/" target="_blank">Symbols in "Everyday Use"</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-1--short-fiction---literary-elements/1-6-theme-and-point-of-view 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>1.6 Theme and Point of View</h2>
<div>
        
        
</div><div><div><div><h4>Theme</h4>
<p>A <strong>theme</strong> is the author's message, a universal idea or controlling statement, like a thesis, that answers big questions like "why?" and "what does it all mean?"  A theme is rarely directly stated; rather, it is implied.  After
    all, as one critic said, literature is the "question minus the answer."  That answer, the theme, should be constructed by the reader and discussed by learning communities.  A theme is bigger and more abstract than a <strong>motif</strong>    (a recurring element) or a <strong>symbol</strong> (an important object).  Specific motifs and concrete symbols are used to highlight and visualize a universal theme.</p>

<p>What is the theme of "The Most Dangerous Game"?  It's not simple advice, like "don't hunt humans."  Rather, a theme for the story should examine the nature of survival, the feelings of prey, and the duality of hunting (for sport vs. for food). 
    A good question might be asked to arrive at its theme: "Has modern man become so spoiled and bored that he feels he must resort to primitive cruelty as entertainment?"      </p>

<h4>Point of View</h4><p><strong>Point of view</strong> is the vantage point from which a story is told.  In most cases, there are four point of view:</p>
<ul>
    <li><strong>first person</strong> ("I") in which the narrator is in the story--telling the story, in fact.</li>
    <li><strong>third person omniscient</strong> ("he," "she," "they") in which there is no narrator, but the narration is "godlike" and can see into the heads (thoughts and motivations) of <strong>all the characters</strong>.</li>
    <li><strong>third person limited</strong> / <strong>close</strong> ("he," "she," "they") in which there is no narrator, but the narration can see into <strong>one character's</strong> head (thoughts and motivations).</li>
    <li><strong>third person objective / distant</strong> ("he," "she," "they") in which there is no narrator, and the narration can see into <span><strong>none of the <span>characters'</span></strong>
</span>heads (thoughts and motivations).</li>
</ul><p><img src="https://lms.svhs.co/pluginfile.php/356136/mod_page/content/17/POVchart.png?time=1654989680581" alt="Point of View chart showing first person and third person points of videw" width="700" height="421" /></p>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.masterclass.com/articles/the-complete-guide-to-narrative-theme-in-literature-definition-examples-and-writing-how-to#literary-theme-2-love" target="_blank">Six Recurring Themes in Literature</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-1--short-fiction---literary-elements/unit-1-study-guide 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Unit 1 Study Guide</h2>
<div>
        
        
        <div id="intro">
            <div><p>This study guide will help you preview the concepts and guide your learning as each new skill or concept is introduced. Use this study guide as the foundation of your notes. You may use it on the unit quizzes, unit tests, and course final.</p>


<p>Click on the link above, and make a copy of the file; you can open the document in Google docs. If you prefer to print it, it is available as a 
    <a href="https://svhs.co/pdf/English09-Part1_Unit1StudyGuide.pdf" target="_blank">PDF</a>.
</p></div>
        </div>
    </div><div><div>Click on <a href="https://docs.google.com/document/d/1KuPX0JY5iCBDxBC_DjQ1xmQzzJFw6wSYftLZ-_rkhy0/copy">Unit 1 Study Guide</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-2--identity---the-graphic-novel/2-1-american-born-chinese 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>2.1 American Born Chinese</h2>
<div>
        
        
</div><div><div><div><p>If you haven't done so already, download the <strong><a href="https://docs.google.com/document/d/1LBtsmGSNzyJIs7p-L9cMsh3TeCo5fhYmyh405SUfMD4/copy" target="_blank">Study Guide</a></strong> for unit 2, you can open it in Google docs. or any word
    processing application. Use the study guide to make notes; it will help you identify and practice the key concepts in the unit. The study guide is available as a <a href="https://svhs.co/pdf/English09-Part1_Unit2StudyGuide.pdf" target="_blank">PDF</a> too.</p>

<h4>The Graphic Novel<br /></h4>
<p>Gene Yang's award-winning graphic novel <em>American Born Chinese</em> combines three forms of literature into one incredible reading experience.  He synthesizes three types of media:</p>
<p>Stories 1, 4, 7: <strong>"The Monkey King"</strong> tales are based on epic myths (ancient Chinese folktales), with a twist.</p>
<p>Stories 2, 5, 8: The <strong>"Jin Wang" </strong>episodes are set in modern America (San Francisco Bay), from early childhood to geeky adolescence to rebellious teenage drama.  Is Jin Wang actually Gene Yang?</p>
<p>Stories 3, 6, 9: The cringe-worthy TV-inspired "<strong>Everybody Ruvs</strong> <strong>Chin-Kee</strong>" is a parody of a 1980s TV sitcom and gross-out comedy (like <em>Sixteen Candles</em>), full of racist stereotypes.  Don't worry, there is a
    method to its madness!   </p>
<p>Yang weaves a tapestry of thought-provoking questions about what it means to be in an unknown environment, whether you are the new kid in school, an immigrant "Fresh off the Boat," or an animal god among human gods in heaven.  At one point, we've
    all felt like a stranger, an alien, an outsider, and a foreigner in our own skin, whether it is in school, on travels, in romantic relationships, in our own family.  </p>
<p>Get ready for one of the best surprise endings in all of storytelling!</p>
<h4>Assignment:  </h4>
<h4>Read "<strong><a href="https://anyflip.com/dnmpl/ziml/basic" target="_blank">American Born Chinese</a></strong>" by Gene Yang.  Or, download the PDF version <a href="https://fb2bookfree.com/uploads/files/2020-10/1602210101_american-born-chinese.pdf" target="_blank">here</a>.</h4>

<br />


<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.adlit.org/video/author-and-illustrator-gene-luen-yang-his-graphic-novel-american-born-chinese#:~:text=Gene%20Luen%20Yang%20writes%2C%20and,a%20National%20Book%20Award%20finalist." target="_blank" title="About the Author: Gene Yang">About the Author: Gene Yang</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-2--identity---the-graphic-novel/2-2--show-and-tell----graphic-essay 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>2.2 "Show and Tell" - Graphic Essay</h2>
<div>
        
        
</div><div><div><div><h4>The Meta-Comic<br /></h4>

<p>Scott McCloud writes comics about comics—very "meta."  In doing so, he breaks the fourth wall, as his cartoon-self teaches us how comics synthesize word and image to tell a graphic story.  Once the reading of teenage boys, comics now are mainstream,
    he says, as the graphic novel’s ability to transcend language and culture can bring people together in more powerful ways than print-only texts might.  In many regards, the graphic novel is the most universal of all literature.</p>
<p>According to McCloud, using graphic novels promotes student learning because it is another medium and language that not only appeals to visual learners, but it helps students to create a lasting memory of a text.  Comics imprint through the verbal,
    visual, and spatial—a veritable triple whammy of rhetoric.  Comics are good cross-over texts to use when transitioning between print-only and digital writing.  Not to mention, graphic novels promote visual literacy instruction in school,
    a more graphic, non-linear style of writing that allows easy manipulation of word, image, and space into a multimedia platform.  Finally, comics are a return to our pre-print past of cave drawings and verbal storytelling, so comics bookend both
    the distant past and the future of literacy.</p>

<h4>Assignment:  </h4>
<h4>Read "<b><a href="https://bpb-us-e1.wpmucdn.com/blogs.uoregon.edu/dist/6/10008/files/2014/12/Scott-McCloud-Understanding-Comics-1a7nmnq.pdf" target="_blank" title="Show and Tell">Show and Tell</a></b>" by Scott McCloud.</h4>

<br />


<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://en.wikipedia.org/wiki/Glossary_of_comics_terminology" target="_blank">Comics vocabulary</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-2--identity---the-graphic-novel/2-3-archetypes-in-literature 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>2.3 Archetypes in Literature</h2>
<div>
        
        
</div><div><div><div><h4>Not Stereotypes, but Archetypes</h4>
<p>Literary critic Joseph Campbell, in his book <em>The Hero Has a Thousand Faces</em>, says that all cultures, throughout time and place, have told the same story, using the same characters, time and again, over and over.  This recurring story he calls
    a "<strong>monomyth</strong>," (literally, "one age-old story").  These recurring characters are called <strong>archetypes</strong>, or stock characters who function in the same roles.  Even the plots of most epics, myths, romances, tragedies,
    and comedies follow the same patterns.   It's what Campbell calls "The Hero's Journey."</p>
<p>For example, what do Harry Potter, Simba, Luke Skywalker, Batman, and Cinderella all have in common?  They are all lonely orphans who become unlikely heroes!</p>
<p>What do the duos Hermione and Ron, Pumba and Timon, R2D2 and C3PO, Robin and Alfred, and the friendly animals from Cinderella all have in common?  They are socially awkward allies who support their respective heroes!</p>
<p>What about <span><em>American Born Chinese</em></span>?  What do the Monkey King, Jin Wang, and Danny all have in common?  Are they not ashamed, at one point, of their identity and cultural heritage?  Who are their allies?  Don't Tze-Yo-Tzuh
    and Wong Lai-Tasao help the Monkey King?  Don't Jing-Wei and Greg support Jin Wang?  Don't Chin-Kee and Melanie help Danny?  You see the patterns?</p>
<p>Take a look at the following discussion on archetypes to see if you can find any more connections...</p>
<h4>Assignment:  </h4>
<h4>Read <a href="https://boords.com/storytelling/character-archetypes" target="_blank" title="&quot;The 12 Character Archetypes&quot;">"The 12 Character Archetypes"</a> </h4>

<br />


<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.arealme.com/which-12-archetype-are-you/en/" target="_blank">Which Archetype are You?</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-2--identity---the-graphic-novel/2-4-identity--who-am-i- 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>2.4 Identity: Who am I?</h2>
<div>
        
        
</div><div><div><div><h4>The Age-Old Question<br /></h4>
<p>The greatest of all epic heroes, young Odysseus, had it all: good looks, courage, cunning, and a great beard.  After all, he was the greatest living mortal who had helped the Greeks win the 10-year Trojan War.  But, the young Odysseus didn't really know himself, such was his <em>hubris</em> (excessive pride).  It took him 20 years lost at sea, suffering, his crew all dying in order for the now old Odysseus to realize his identity was that of a mortal (a human) and not an immortal (or a god).  </p>
<p>Archetypal characters, like the <em>young</em> Odysseus, who are full of pride, are called "<strong>alazons</strong>."  These characters think they are better than they really are.  They are deceivers, imposters who serve themselves,
    instead of others.</p>
<p>Alazons in literature include: Satan, Voldemort, Darth Vader, the Joker, Scar, and the Wicked Stepmother (Cinderella).  These villains abuse power; they are vengeful and spiteful; they are part of the "me" culture.</p>
<p>Archetypal characters, like the <span><em>old</em></span> Odysseus, who are humble are called "<strong>eirons</strong>."  These are characters who are better than they think they are.  They are self-deprecating, who serve others, not themselves.</p>
<p>Eirons in literature include: Christ, Harry Potter, Luke Skywalker, Batman, Simba, and Cinderella.  Eirons know they have growth potential; they need allies for support; they are charitable and loving; they are part of the "we" culture.</p>
<p>Let's learn more about how we construct ourselves and our identities, how we tell our own stories.</p>


<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.litcharts.com/lit/american-born-chinese/themes/identity-and-prejudice" target="_blank">The Themes of Identity and Prejudice in <em>American Born Chinese</em></a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-2--identity---the-graphic-novel/2-5-culture--who-are-we- 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>2.5 Culture: Who are we?</h2>
<div>
        
        
</div><div><div><div><h4>Culture</h4>

<p>Defining "I" (personal identity) is tough enough.  But what about defining "we" as a culture?  It's a daunting task, especially for a young person.</p>
<p><strong>Culture</strong> is an umbrella term comprised of many moving parts: personal and family values, community beliefs, education and language, even dress and food customs.  Most of these are taught to us directly; others, however, are invisible
    and taken for granted.  We often appreciate our home culture, ironically, only after we leave home and enter into a new culture.</p>
<p>You've heard of the <em>Shrek</em> "Onion Theory"?  Think of your identity as an onion with many layers.  On the outermost "skin" is your larger community (national culture).  Another layer in is your neighborhood (local culture). 
    And then there's your family (home culture).  And then there's your core social and emotional values.  Where do your beliefs and attitudes come from?  It's a complex exchange between all the cultural layers.  </p>
<p>Take a look at this diagram:</p>
<p><img src="https://lms.svhs.co/pluginfile.php/356149/mod_page/content/17/Onion.jpg" alt="LAyers of culture and self, depicted as an onion" width="660" height="509" /></p>
<p>There are three kinds of conversations we've all had: </p>

<ul>
    <li><strong>entry conversations </strong>about work, family, history, and education.</li>
    <li><strong>investigative questions</strong> about how we make choices and internalize values personally.</li>
    <li><strong>conversion discussions </strong>about core beliefsinitially influenced by culture but later changed through crisis and confrontation.</li>
</ul>


<p>Needless to say, it's a complicated process!</p>


<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.simplypsychology.org/social-identity-theory.html" target="_blank">Social Identity Theory</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-2--identity---the-graphic-novel/2-6-literacy-narrative--how-does-language-define-us- 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>2.6 Literacy Narrative: How does language define us?</h2>
<div>
        
        
</div><div><div><div><h4>The story of language is connected to identity</h4>

<p>In her famous literacy narrative "Mother Tongue," Chinese-American author Amy Tan tells of learning the "four Englishes" from her non-native speaking Chinese mother: the "simple" and "broken" spoken informally at home and the "limited" and "proper" spoken
    in public.  </p>
<p>As you read Amy Tan's literacy narrative, try to connect to how Jin Wang and Wei-Chen Sun, also from San Francisco's Chinatown,  learn the languages needed to assimilate (or fit in) to a new culture, a new school, and new relationships. What
    mistakes do Jin and Wei-Chen make publicly and privately? Are they ashamed of their native language or mother tongue? What ways of speaking or writing help them learn to be humble and accept their language, and therefore, their identity?
     </p>
<p>Who has shaped you in meeting new people and traveling to new places? What types of languages do you speak and write? Even if you are monolingual (speak only one language), there are many languages within languages. Don't you speak differently
    to your friends (privately) than you do adults (publicly)? How do you speak to new people you've just met? How might you write to your boss at work? All of these ways of speaking and writing to new audiences are, in effect, different
    literacies. We all use different appeals, tones, and ranges of formal and informal language to meet these rhetorical situations.</p>

<h4>Assignment:  </h4>
<h4>Read "<strong><a href="https://www.umsl.edu/~alexanderjm/Mother%20Tongue%20by%20Tan.pdf" target="_blank">Mother Tongue</a></strong>" by Amy Tan.</h4>



<div></div>
<div></div>
<div></div>
<p><strong>READING</strong>: </p>
<p><a href="https://engl110bcrowe.commons.gc.cuny.edu/nortons-writing-a-literacy-narrative/" target="_blank">A Guide to Writing a Literacy Narrative</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-2--identity---the-graphic-novel/unit-2-study-guide 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Unit 2 Study Guide</h2>
<div>
        
        
        <div id="intro">
            <div><p>This study guide will help you preview the concepts and guide your learning as each new skill or concept is introduced. Use this study guide as the foundation of your notes. You may use it on the unit quizzes, unit tests, and course final.</p>


<p>Click on the link above, and make a copy of the file; you can open the document in Google docs. If you prefer to print it, it is available as a 
    <a href="https://svhs.co/pdf/English09-Part1_Unit2StudyGuide.pdf" target="_blank">PDF</a>.
</p></div>
        </div>
    </div><div><div>Click on <a href="https://docs.google.com/document/d/1LBtsmGSNzyJIs7p-L9cMsh3TeCo5fhYmyh405SUfMD4/copy">Unit 2 Study Guide</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-3--writers-workshop/3-1-writing-claims 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>3.1 Writing Claims</h2>
<div>
        
        
</div><div><div><div><p>If you haven't done so already, download the <strong><a href="https://docs.google.com/document/d/1HXMg0MLhaAeTr3PYsmV-lCt_vzwM4PacMFdk0r_bB4o/copy" target="_blank">Study Guide</a></strong> for unit 3, you can open it in Google docs. or any word
    processing application. Use the study guide to make notes; it will help you identify and practice the key concepts in the unit. The study guide is available as a <a href="https://svhs.co/pdf/English09-Part1_Unit3StudyGuide.pdf" target="_blank">PDF</a> too.</p>
<h4>The Claim<br /></h4>
<p>The <strong>claim</strong> is the building block of all academic writing.  A claim goes by many names: a topic sentence, a thesis statement, a premise, an argument, an opinion, an assertion, or a declaration.  All of these are claims, or statements
    that a writer presents as true or of value, that can be supported by evidence, or that calls for change.  There are three main categories of claims:</p>

<div><strong>Claims of Fact</strong>: a statement that claims to be true, according to reasons, and can later be supported by evidence.  (<strong>Claim of fact</strong>: "A democratic government allows for the most participation."  <strong>Reason</strong>: "Democracies allow for free and fair elections."  
    <strong>Evidence</strong>: "According to <em>The Economist</em>, a democracy allows for freedom and security of all voters, resists foreign influence, and allows elected officials to enact policies."   
</div>
<div><strong><br /></strong></div>
<div><strong>Claims of Value</strong>: a statement that claims to be true, according to reasons, and is supported by values, beliefs, or cultural traditions.  Claims of value are more
    <strong>subjective</strong> than claims of fact, which are mainly objective.  
    <strong>Claim of value</strong>: "Democracy governments allow the most freedoms.  <strong>Reason</strong>: "Democracies give voters and elected officials the most autonomy, or freedom."  
    <strong>Value</strong>: "Autonomy, or freedom, is the core value in democratic societies."    
</div>
<div><strong><br />Claims of Policy</strong>: a statement that a change in a policy or law should take place, according to reasons, and is supported by <u>both</u> claims of fact and claims of value.  Claim of policy use the other two claims to call for action and change.  <strong>Claim of policy</strong>: "The U.S. election voting system ought to change: Americans ought to be allowed to vote over multiple days, not one day only, in order to increase participation in government and balance work, family, and civic duty." Notice that a claim of policy uses a claim of fact ("to increase participation,") and claim of value ("civic duty") in order to call for change ("to vote over multiple days, not one day only").<br /><br /></div>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.modelteaching.com/education-articles/writing-instruction/claim-evidence-reasoning-cer" target="_blank">Claims-Evidence-Reasoning Model for Writing</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-3--writers-workshop/3-2-logical-reasoning 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>3.2 Logical Reasoning</h2>
<div>
        
        
</div><div><div><div><h4>Types of Reasoning</h4>
<p>If the claim is the building block of all academic writing, then logical reasoning is the mortar that holds the building together.  It is "glue" that helps join together claims with evidence.  <strong>Logical reasoning </strong>helps
    you to recognize the parts of an argument and their relationships, to make well-supported conclusions, to recognize misunderstandings or points of disagreement, to identify warrants (underlying assumptions), and to anticipate flaws (logical fallacies) in arguments.
</p>

<p>Logical reasoning comes in two types: deductive reasoning and inductive reasoning.  <strong>Deductive</strong> <strong>reasoning</strong> guarantees the <em>absolute truth</em> of a conclusion. <strong>Inductive reasoning</strong> is less absolute; it leads to the <em>probability </em>of a conclusion.  The goal of deductive reasoning is to lead to <em>certainty</em>, using a direct and absolute line of reasoning.  The goal of inductive reasoning is to lead to <em>trends</em>, using a likelihood in the line of reasoning.  </p>

<p><strong><u>Deductive Reasoning</u></strong>: If A equals B, and B equals C, then A is equal to C (absolutely true every time).</p>
<p><strong><u>Inductive Reasoning</u></strong>: If A is similar to B, and B is similar to C, then A is similar to C (likelihood of similarity but not a guarantee).</p>
<p><u>Key Words</u>: <br /><strong>Deductive reasoning </strong>usesvery strong language, which makes arguments "air tight," with no exceptions:
    <strong>“All…” ; “It must be…” ; “It is true that…” ; “Everyone…” ; “...always…” ; “...never…”</strong>
</p>
<p><u>Key Words:</u><strong> <br />Inductive reasoning </strong>uses less strong language, which, again, leads to probability and trends:   
    <strong>“Most…” ;  “Usually…” ; “Likely…” ; “Probably…” ; “For the most part…” ; "...in most cases..."</strong>
</p>Which
one is this, deductive or inductive?  <br />
<div>
    <div>"Most humans are right-handed.  I am a human.  Therefore, I am most-likely right-handed." </div>
</div><br /> If you said "inductive reasoning," you are correct.  Which words gave it away?  "Most likely?"  Of course!  It is probably the case, but it cannot be an absolute truth.  <br /><br />


<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="http://www.argumentationtoolkit.org/reasoning.html" target="_blank">Reasoning in Writing Toolkit</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-3--writers-workshop/3-3-choosing-types-of-evidence 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>3.3 Choosing Types of Evidence</h2>
<div>
        
        
</div><div><div><div><h4>Evidence, the meat of the sandwich<br /></h4>
<p>So, if claims are the building blocks of all academic writing, and reasoning is the glue that keeps them together, then evidence is the actual building that takes shape. Evidence is the wooden structure that supports and is supported by all claims
    (building blocks). <span>A better analogy might be that of the sandwich: claims are the bread (starters); reasoning are the condiments (the special sauce); and evidence is the main ingredient, the meat or the cheese, in the middle.  </span></p>
<p>Think of a paragraph as a sandwich. The C-E-C method illustrates this sandwich-making process:</p>
<p><strong><u>C-E-C Paragraph</u>:</strong><br /></p><ul><li><ul><li><ul><li><strong>Claim</strong><span>: topic sentence and reasoning (1-2 sentences)  </span></li><li><strong>Evidence</strong><span>: quotes or data used as support (1-2 sentences) </span></li><li><strong>Commentary</strong><span>: analyzes the evidence and connects it to the claim. (2-4 sentences)</span></li></ul></li></ul></li></ul>



<p>Evidence comes in all shapes and sizes. In English, teachers mainly require <strong>quotes</strong> from the text as evidence. In Social Studies, teachers may use <strong>artifacts</strong> (objects, maps, graphs). In science and math, <strong>data</strong>    is primarily used as evidence. A mix of all evidence may be presented in longer research projects.</p>
<p>In humanities, evidence is measured on how close it is to the original source. An original source is also known as a primary source. If someone paraphrases a <strong>primary</strong> source, it becomes a <strong>secondary</strong> source. If someone paraphrases a secondary source, it becomes a <strong>tertiary</strong> source. And so on...</p>
<p>For example: </p>
<ul>
        <li><span>I conduct an experiment on water quality and publish my results:<strong> PRIMARY SOURCE</strong></span><br /></li>
        <li><span>My friend writes about my results in the school newspaper: <strong>SECONDARY SOURCE</strong></span><br /></li>
        <li><span>A national newspaper writes about my friend's article: <strong>TERTIARY SOURCE</strong></span><br /></li>
    </ul>

<p>A mix of all types of sources are needed in most research projects, depending on the topic, audience, and purpose.</p>

<div></div>
<div></div>
<p><span>Reading:</span><br /></p><p><a href="https://helpfulprofessor.com/types-of-evidence-in-writing/" target="_blank" title="Types of Evidence Used to Write a Paper">Types of Evidence Used to Write a Paper</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-3--writers-workshop/3-4-commentary--analyzing-evidence 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>3.4 Commentary: Analyzing Evidence</h2>
<div>
        
        
</div><div><div><div><h4>Analysis and Synthesis vs. Summary of Evidence</h4>
<p>Imagine you're a criminal investigator or a lawyer in a high-profile trial.  Evidence is key.  The difference between a guilty or innocent verdict is how you explain the evidence to a jury and judge.  Do you tell stories?  Do you use
    graphs?  Do you role play?  How do you break down the evidence so that it is meaningful and impactful to a general audience?  </p>
<p>If your claims are the bricks, if your reasoning is the mortar holding them in place, and if your evidence is the scaffolding supporting it all, then your analysis of evidence is the finished building, the "after" photo showing what it means to live in
    the place when finished.</p>
<p>Analysis and commentary are the second half of academic writing.  After the claim and evidence (the first half), analysis and commentary of evidence are what connects all the information together.  It is the destination of where the writer has
    guided the reader all along.  Evidence and commentary are where claims are proved true and valid.  It is where your evidence is grounded and supported.  It is where your conclusions are stated.  </p>
<p>The act of analyzing evidence is a process of breaking up the evidence into smaller pieces that can better be understood by the reader.  Analysis is "surgery," pulling out selected key pieces of evidence to polish to a fine shine.  </p>
<p>Analysis is not summary.  It is not general; rather, it is often more specific than the evidence itself.  It is a "digging deeper" process that continues to polish the evidence until it is a golden nugget, a worthy find.</p>


<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://writingcenter.uagc.edu/summary-vs-analysis" target="_blank">Summarizing vs. Analyzing Evidence in Academic Writing</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-3--writers-workshop/3-5-synthesizing-information 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>3.5 Synthesizing Information</h2>
<div>
        
        
</div><div><div><div><h4>Synthesis is Creating<br /></h4>
<p>The highest level of thinking, according to Bloom's Taxonomy in 1956, used to be "Evaluating," or deciding what information or decision is best.  Nearly a century later, the world has changed, largely due to technology, the Digital Revolution, thus
    issuing in the Information Age.  A century later, the highest level of thinking, according to Bloom's (Revised) Taxonomy in 2001, is now <strong>"Synthesis,"</strong> or <strong>"Creating"</strong> new information from all sources available.  </p>

<p>"Synthesizing" is the act of "<strong>filtering</strong>" all the available sources down to the most important ones in order to <strong>create</strong> a new kind of source.  In effect, academic research is the act of synthesizing primary, secondary, and tertiary sources in order to create a new "fourth" level source.  So, the act of filtering good sources using a database is an essential skill we want you to learn here at Silicon Valley High School.</p>

<p>Academic research has much higher standards than simple "Google" searching.  In academic writing and research, teachers want sources that have been "vetted," or screened, hand-picked as quality sources by librarians and researchers.  A source
    written by an expert, a doctor, or a specialist is much more valuable than that written by an unknown, a student, or a biased blogger.  So, as a "synthesizer" yourself, you will be asked to filter information using managed databases like  <a href="https://scholar.google.com">Google Scholar</a>!</p>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.wikihow.com/Write-a-Synthesis-Essay" target="_blank">Step-by-Step Guide to Writing a Synthesis Paper</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-3--writers-workshop/3-6-rebuttals-and-counterarguments 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>3.6 Rebuttals and Counterarguments</h2>
<div>
        
        
</div><div><div><div><h4>How to Manage and Anticipate Disagreement<br /></h4>
<p>So, you've spent all this hard work developing claims, fine-tuning your reasoning, compiling and analyzing evidence, and citing sources.  What if your reader disagrees with your conclusion claim?  What if there is an opposing view that is valid?
     As a writer, you should anticipate, even welcome, disagreement.  In fact, you should plan for it in a counterargument.</p>
<p>Like a claim, a counterargument goes by many names: disagreement, counterclaim, concession, or rebuttal.  In fact, a counterargument is a claim!  It's a counterclaim.  Traditionally, counterarguments have gone in a paragraph before the conclusion.  However, in order to build consensus, many counterargument paragraphs can be presented after the introduction.  Acknowledging your opponents' point of view is a mature approach to discussing a controversial issue.  And, it steals their thunder.  But, you must remember to carefully position your counterargument as a possible approach, but ultimately a weaker argument than your own.</p>
<p>Let's clarify some terms:  A <strong>counterargument</strong> is another point of view that contrasts with your argument.  A <strong>concession</strong> is admitting that this counterargument has some good points.  A <strong>rebuttal</strong> is positioning your argument against your counterargument to show how your argument is better.  So, ultimately, we would like for you to write all three claims in this kind of order: 1) counterargument; 2) concession; 3) rebuttal.  Like any claim, you will, of course, need to build in evidence to prove your rebuttal, but this paragraph is perhaps the most persuasive in urging your reader to agree with your viewpoint.</p>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://writingcenter.uagc.edu/counterargument" target="_blank">Writing a counterargument thesis</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-3--writers-workshop/unit-3-study-guide 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Unit 3 Study Guide</h2>
<div>
        
        
        <div id="intro">
            <div><p>This study guide will help you preview the concepts and guide your learning as each new skill or concept is introduced. Use this study guide as the foundation of your notes. You may use it on the unit quizzes, unit tests, and course final.</p>


<p>Click on the link above, and make a copy of the file; you can open the document in Google docs. If you prefer to print it, it is available as a 
    <a href="https://svhs.co/pdf/English09-Part1_Unit3StudyGuide.pdf" target="_blank">PDF</a>.
</p></div>
        </div>
    </div><div><div>Click on <a href="https://docs.google.com/document/d/1HXMg0MLhaAeTr3PYsmV-lCt_vzwM4PacMFdk0r_bB4o/copy">Unit 3 Study Guide</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-4--poetry/4-1-types-of-verse-and-sound-devices 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>4.1 Types of Verse and Sound Devices</h2>
<div>
        
        
</div><div><div><div><p>If you haven't done so already, download the <strong><a href="https://docs.google.com/document/d/1nq1zCvpqpN9SaMWnpk7lwHrldF0ApZIC8Tj72rQLrxg/copy" target="_blank">Study Guide</a></strong> for unit 4, you can open it in Google docs. or any word
    processing application. Use the study guide to make notes; it will help you identify and practice the key concepts in the unit. The study guide is available as a <a href="https://svhs.co/pdf/English09-Part1_Unit4StudyGuide.pdf" target="_blank">PDF</a> too.</p>


<h4>The Patterns of Poetry<br /></h4>
<p>Poetry is the oldest and most difficult literary art form to read, write, and understand. Poetry is heavily encoded: it uses much figurative language in very few words. Poetry is also highly rhythmic and lyrical (song-like), using sound to
    achieve a tone to match its message.  </p>
<p>In general, there are two types of verse: fixed and free verse. <strong>Fixed verse</strong> is poetry that uses a kind of template that limits its line length or sound devices. Examples of fixed verse poetry forms are the haiku, sonnet, or
    limerick. These poems each have a set number of syllables, lines, or rhyming patterns that fit a standardized format. Usually, a fixed verse poem has about the same number of line lengths throughout. Therefore, its overall shape
    is that of a square or rectangle.  </p>
<p>A <strong>free verse</strong> poem, on the other hand, has no template, no set number of syllables, lines, or rhyme scheme. Free verse lines can be as short as a word and as long as a paragraph. Sometimes, a free verse poem's lines can run
    off the page. Free verse poems can be identified easily by their line length variation.  </p>
<p>When reading a poem, look for repetition or patterns at the beginning and ends of lines. Look for transitions, or <em><strong>voltas</strong></em> (turns), that signal a change in tone. A sonnet, for example, usually has a <em>volta</em> (a
    turn) in line 9 of 14 in order to move from problem to solution or from cause to effect.</p>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.writerscookbook.com/different-forms-of-poetry/" target="_blank">Fixed versus Free Verse Poetry Types</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-4--poetry/4-2-poet-vs-speaker 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>4.2 Poet vs. Speaker</h2>
<div>
        
        
</div><div><div><div><h4>What's the difference?<br /></h4>
<p>Many poets, like hip-hop artists, use a variety of voices, or <strong>personas</strong> (an alter-ego role adopted by an artist) in order to represent a new viewpoint.  Megan Thee Stallion uses "Tina Snow" as a persona, as well as "Suga."  Future
    is also known as "Pluto."  Eminem used many personas: most famously "Slim Shady."</p>
<p>The same can be said of poets, even more so.  In literature, we classify all narrators or voices as <span>speakers</span>. A <strong>speaker</strong> is the one who delivers a poem or speech.  In some cases, there may be more than one.  Regardless,
    a reader <strong><u>cannot</u></strong> assume that the speaker is the same as the poet, or that the speaker's viewpoint is that of the poet's.  Again, poets use many voices in order to present a cross-section of society, multiple viewpoints,
    often comically or satirically, for effect.  In fact, in a satirical poem, the speaker's viewpoint is likely the very opposite of the poet's.  </p>
<p>So, in your discussion of poems, speeches, stories, and essays, always differentiate the author from the speaker.  Never assume that a voice in any of these works are synonymous with the author's.  Authors and poets often use sarcasm, overstatement,
    understatement, and verbal irony in order to mask their voice, poke fun at others, and to ridicule their targets.   </p>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://web.uvic.ca/hrd/closereading/speaker.html" target="_blank">A Close Reading of Poetry: The Persona</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-4--poetry/4-3-types-of-imagery 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>4.3 Types of Imagery</h2>
<div>
        
        
</div><div><div><div><h4>Using Images to Evoke Emotion<br /></h4>
<p><strong>Imagery</strong> is visual symbolism, images (nouns) in a literary work that appeal to the senses.  Although we might think we have only five senses, there are a few more that we take for granted.  Poets are keenly aware of how to appeal us viscerally (literally) and emotionally (figuratively).  In general, there are two categories of imagery: <strong>literal imagery</strong> are words that a poet uses to evoke a physical sensory experience, emotion, or feeling.  In literal imagery, we actually experience a real image.  <strong>Figurative imagery</strong>, on the other hand, uses description through literary devices (similes, metaphors, analogy)<span> to create a vivid picture for the reader.  Figurative imagery is imagined (in the mind's eye), not physically experienced, like literal imagery.  Poets use a mix of both categories of imagery, depending on the occasion. </span></p><p><span>In the literal imagery category, here are the most common sensory appeals:</span></p><ul><li><ul><li><span>Sight: called</span><strong> visual imagery </strong><span>(colors, shapes, symbols)</span></li><li><span>Hearing: called </span><strong>auditory imagery </strong><span>(sounds, music, noises)</span></li><li><span>Touch: called<strong> tactile imagery</strong> (skin, fabric, light/heavy objects)</span></li><li><span>Smell: called <strong>olfactory imagery</strong> (scents, food smells, natural aromas)</span></li><li><span>Taste: called <strong>gustatory imagery </strong>(sweet or bitter, salty or savory flavors)</span></li><li>Whole body movement: called <strong>kinesthetic imagery</strong> (actions of running, climbing, working)</li><li>Feelings of want: called <strong>organic imagery</strong> (hunger, thirst, tiredness, sickness)</li><li>Feelings of faintness: called <strong>equilibrioception imagery</strong> (dizziness, falling, fainting)</li><li>Mixed types: called <strong>composite imagery</strong> (contradictory senses, mixing any two senses together)</li></ul></li></ul>So, when we begin reading Romeo and Juliet (unit 5), look for Shakespeare's use of tactile imagery, the heaviness and lightness of physical (literal imagery) and emotional (figurative) objects, like "love."  The Bard also uses tactile imagery to contrast light and dark.<br />


<div></div>
<div></div>
<div></div>

<h4>Reading:</h4><p><a href="https://www.masterclass.com/articles/poetry-101-what-is-imagery-learn-about-the-7-types-of-imagery-in-poetry-with-examples#7-types-of-imagery-in-poetry">Seven Types of Imagery in Poetry</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-4--poetry/4-4-the-sonnet 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>4.4 The Sonnet</h2>
<div>
        
        
</div><div><div><div><h4>The King of the Fixed Form</h4>
<p>The sonnet is the gold standard of fixed verse poetry.  The Italians have their own version of it, called the Plutarchian Sonnet.  The British have their own version, called the Spenserian Sonnet.  Shakespeare famously wrote 118 sonnets
    about love, life, and the English Renaissance.  </p>
<p>In general, most sonnets are one stanza, have 14 lines long, and have a fixed line length, usually 10 syllables.  Most are written in <strong>iambic pentameter</strong>, five sets of unstressed, stressed syllables.  Even though they are one
    stanza, most sonnets can be divided into two parts, the <strong>octave</strong> (first eight lines), which describes a problem or cause, and the <strong>sestet</strong> (last six lines), which offers a solution or effect.  In the middle, of course,
    if a transition, or a <em><strong>volta</strong></em> (Italian for "turn").  Usually, a volta begins the 9th line (the first line of the sestet) with a word like "But", "So", or some shift in tone.    Often, a sonnet will end with a
    <strong>couplet</strong>, a pair of rhyming lines, to make it more memorable. </p>
<p>Before the Statue of Liberty was installed near Ellis Island, New York, a sonnet was commissioned as a dedication to American immigration, liberty, and democracy.  Emma Lazarus' sonnet (below) is engraved in bronze at the base of Lady Liberty and
    has become the most famous American sonnet:</p>
<h4>Assignment:  </h4>
<h4>Read "<strong><a href="https://www.nps.gov/stli/learn/historyculture/colossus.htm" target="_blank">The New Colossus</a></strong>" by Emma Lazarus.</h4>

<br />


<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="http://rickbarbour.com/wp-content/uploads/2018/08/4.8-Iambic-pentameter.pdf" target="_blank">An Overview of Iambic Pentameter</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-4--poetry/unit-4-study-guide 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Unit 4 Study Guide</h2>
<div>
        
        
        <div id="intro">
            <div><p>This study guide will help you preview the concepts and guide your learning as each new skill or concept is introduced. Use this study guide as the foundation of your notes. You may use it on the unit quizzes, unit tests, and course final.</p>


<p>Click on the link above, and make a copy of the file; you can open the document in Google docs. If you prefer to print it, it is available as a 
    <a href="https://svhs.co/pdf/English09-Part1_Unit4StudyGuide.pdf" target="_blank">PDF</a>.
</p></div>
        </div>
    </div><div><div>Click on <a href="https://docs.google.com/document/d/1nq1zCvpqpN9SaMWnpk7lwHrldF0ApZIC8Tj72rQLrxg/copy">Unit 4 Study Guide</a> to open the resource.</div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-5--romeo-and-juliet/5-1-whos-who-in-verona--romeo-and-juliet 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>5.1 Who's Who in Verona: Romeo and Juliet</h2>
<div>
        
        
</div><div><div><div><p>If you haven't done so already, download the <strong><a href="https://docs.google.com/document/d/1HS9JhutdQjsrkRmOxUrBLXx7F17jJQBeN2iu9tII9EQ/copy" target="_blank">Study Guide</a></strong> for unit 5, you can open it in Google Docs. Use the
    study guide to make notes; it will help you identify and practice the key concepts in the unit. The study guide is available as a <a href="https://svhs.co/pdf/English09-Part1_Unit5StudyGuide.pdf" target="_blank"><strong>PDF</strong></a> too. Review the assignment for this unit. Think about it as you are reading the book. Collect ideas and make notes. </p>

<h3>The Play's the Thing</h3>
<p>Shakespeare's <em>Tragedy of Romeo &amp; Juliet </em>is an early play by the great Elizabethan playwright, adapted from an Italian story of romance.  In the play, Shakespeare confronts the dualities of love and death, those two extremes that propel
    the young lovers into each others' arms.  </p>
<p>The play begins with a <strong>sonnet</strong> which, *SPOILER*, gives a synopsis of the play by the Chorus as a kind of preview that you might see in a movie theater.  His famous line about the "star-crossed lovers" juxtaposes the fate versus free
    will themes of love and death.  It's a classic teenage romance in which we are ironically attracted to those who may both love and hurt us most.</p>
<p>The play's setting, the city-state of Verona, Italy, tells of two rival families, the Montagues (Romeo's family) and Capulets (Juliet's family).  Each family mirrors the other according to character parallels or <strong>foils</strong> (reflections
    of each other):</p>
<table>
    <caption><br /></caption>
    <thead>
        <tr>
            <th scope="col"><em>Who's Who in Verona</em></th>
            <th scope="col"><u>Montagues</u></th>
            <th scope="col"><u>Capulets</u></th>
            <th scope="col"><u>Neutral</u></th>
        </tr>
    </thead>
    <tbody>
        <tr>
            <td><strong><u>Patriarch of Family</u></strong> </td>
            <td> Lord Montague          </td>
            <td> Lord Capulet      </td>
            <td>   </td>
        </tr>
        <tr>
            <td><strong><u>Matriarch of Family</u></strong></td>
            <td> Lady Montague </td>
            <td> Lady Capulet</td>
            
        </tr>
        <tr>
            <td><strong><u>Servants to Family Heads</u></strong>   </td>
            <td>Abraham</td>
            <td> Sampson</td>
            
        </tr>
        <tr>
            
            
            <td> Gregory</td>
            
        </tr>
        <tr>
            <td><strong><u>Only Child</u></strong></td>
            <td> Romeo</td>
            <td> Juliet</td>
            
        </tr>
        <tr>
            <td><strong><u>Servants to Children</u></strong></td>
            <td> Balthasar</td>
            <td> Nurse</td>
            
        </tr>
        <tr>
            
            
            <td> Peter</td>
            
        </tr>
        <tr>
            <td> <strong><u>Hot-Head</u></strong></td>
            <td> Mercutio</td>
            <td> Tybalt</td>
            
        </tr>
        <tr>
            <td> <strong><u>Peace-maker</u></strong></td>
            <td> Benvolio</td>
            <td> Paris</td>
            
        </tr>
        <tr>
            <td> <strong><u>Royalty</u></strong></td>
            
            
            <td> Prince Escalus</td>
        </tr>
        <tr>
            <td> <strong><u>Clergy</u></strong></td>
            
            
            <td> Friar Lawrence<br /> Friar John</td>
        </tr>
    </tbody>
</table>
<br /><em>As you read, keep this chart handy in order to understand family allegiance and roles.</em><br />


<h3>Assignment: Read Act I of <a href="https://www.litcharts.com/shakescleare/shakespeare-translations/romeo-and-juliet" target="_blank">Romeo &amp; Juliet</a> by William Shakespeare (original and modern text side by side)</h3>


<p><strong>Of Pentameter &amp; Bear Baiting - Romeo &amp; Juliet Part I</strong></p>

<div></div>

<p><strong>Love or Lust? Romeo and Juliet Part II</strong></p>

<div></div>


<div></div>


<h4><br />Reading:</h4><a href="https://engoo.com/app/lessons/introduction-to-romeo-and-juliet/1JPTQhVbEeeqmO8-1oURnA" target="_blank">An Introduction to the play</a><br />
</div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-5--romeo-and-juliet/5-2-the-role-of-language-in-shakespeare 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>5.2 The Role of Language in Shakespeare</h2>
<div>
        
        
</div><div><div><div><h4>Key Literary Devices in Shakespeare</h4>
<p>Shakespeare is the most influential writer in the English language.  A double-threat poet and dramatist (playwright), Shakespeare captured the imaginations of both the upper-class courtiers and the commoners in London.  In fact, Shakespeare
    wrote a mix of <strong>poetry</strong> (verse) and <strong>prose</strong> (everyday speech) in <em>Romeo &amp; Juliet</em>.  </p>
<p>In general, the upper-class characters, like the Montague, Capulets, and the Prince speak in <strong>blank verse</strong>, unrhymed iambic pentameter (10-syllable lines with a stressed, unstressed patter).  By contrast, most servants, comic characters,
    and lower class characters speak prose, or common language.  Though their prose is different than today's, Shakespeare used many of these characters as comic relief, making some rather dirty jokes in the process!</p>
<p>
    In particular, Romeo, Juliet, and Friar Lawrence speak in thoughtful, poetic iambic pentameter to elevate them above the rest.  Benvolio, on the other hand, will deliver plain, unimaginative iambic pentameter.  The Prince
    and Tybalt will really flex, speaking strong, war-like iambic pentameter.  Lord and Lady Montague speak short, choppy iambic tetrameter, while Mercutio, the Nurse, and servants will deliver dark, bawdy prose (common language).
     Mercutio is a "mercurial," person to sudden or unpredictable changes of mood or mind.  Mercutio is both comic relief and a tragic commentator on the action.  His famous "Queen Mab" monologue foreshadows the fateful night
    to come.
</p>

<p>There are three kinds of speeches in the play: monologues, soliloquies, and asides.  <strong>Monologues</strong> are long speeches delivered to others on stage to deliver public information.  <strong>Soliloquies</strong> are long speeches delivered
    alone on stage in order to reveal a character's private thoughts or fears.  <strong>Asides</strong> are brief comments made under one's breath that the audience can hear, but others on stage do not hear or pretend not to hear.  </p>

<div>As you read Act II, look for more sonnets, one by the Chorus as a prologue to the action, and one by Romeo as he gives Juliet their first kiss at the party.  Pay close attention to both <strong>literal imagery</strong> (her "hand" and "lips") and
    <strong>figurative imagery</strong> ("holy shrine").  Talk about one of the great pick-up lines in history!  Romeo has got game!  Act II also begins the thrust of the dramatic irony of the play in which only a few characters (Friar
    Lawrence and the Nurse) and the audience know about the secret marriage.  <strong>Dramatic irony </strong>is achieved when the audience knows crucial information that others on stage do not.  We know that Romeo and Juliet are married,
    but Mercutio, Tybalt, and their parents do not!  Can you imagine?
    <br /><br /></div>

<p>Here are some other old words no longer in use today:</p>

<ul>
    
<li><ul>
        
    <li><ul>
            <li>Anon: shortly</li>
            <li>Avaunt!:  go away! </li>
            <li>Ere: before</li>
            <li>Thou: you</li>
            <li>Thy: Your</li>
            <li>Aye or Ay: Yes</li>
            <li>Doth: does, do</li>
            <li>O’er: Over</li>
            <li>‘Tis: It is</li>
            <li>Is’t:  Is it</li>
        </ul></li></ul></li></ul>

<h3>Assignment: Read Act II of <a href="https://www.litcharts.com/shakescleare/shakespeare-translations/romeo-and-juliet" target="_blank">Romeo &amp; Juliet</a> by William Shakespeare (original and modern text side by side)</h3>

<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.rsc.org.uk/shakespeare-learning-zone/romeo-and-juliet/language/key-terms" target="_blank">Language in Shakespeare's <em>Romeo &amp; Juliet</em></a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-5--romeo-and-juliet/5-3-figurative-language 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>5.3 Figurative Language</h2>
<div>
        
        
</div><div><div><div><h4>Literal and the non-literal<br /></h4>
<p><strong>Literal language</strong> is straightforward and concise, a kind of "I mean what I say" delivery, with a single interpretation.  Figurative language, by contrast, is "extra," as there are multiple ways to interpret its meanings.  If
    someone throws some shade your way, you may ask, "What did you mean by that?"  It's usually because there are double meanings in those words.</p>
<p><strong>Figurative language</strong> is all about double meanings and coded language.  If we make a comparison between two similar things, it is known as an <strong>analogy</strong>.  If we make a comparison between two unlike things, it is
    known as a <strong>metaphor</strong>.    If we make a comparison between two unlike things using "like" or "as", it is known as a <strong>simile</strong>.  If we place any two things next to each other expressly for comparison or contrast,
    it is known as <strong>juxtaposition</strong>.  If we connect two opposite things to each other, it is known as <strong>antithesis</strong>.  If we call a thing by both its name and its opposite name together, it is called an <strong>oxymoron</strong>.
     If an event happens that is the exact opposite of what expected to happen, we call it <strong>situational irony</strong>.  If something bad happens that we knew about (as a reader or audience member) but could do nothing to prevent (in
    terms of the outcome of a story or performance), we call it <strong>dramatic irony</strong>.  If we say something that is the opposite of what we mean, we call it
    <strong>verbal irony</strong>.  If we say something that is the opposite of what we mean in a <em>nasty</em> way, we call it <strong>sarcasm</strong>.  If we exaggerate the meaning or importance of something, we call it <strong>hyperbole</strong>    (or overstatement).  If we downplay the meaning or importance of something, we call it <strong>understatement</strong>.</p>
<p>Shakespeare uses a mix of literal and figurative language in Romeo and Juliet.  Just at Juliet's lines in Act II:</p>
<div><em><strong>Go ask his name: if he be married.<br />My grave is like to be my wedding bed.</strong></em>

</div>

<p>Which line is literal and which is figurative?  What kind of figurative language is she using?  If you said that the first one is literal, you would be correct!  Juliet wants the Nurse to go ask Romeo's name and to see if he is married.
     The second line uses a simile to compare her wedding bed to a grave, a kind of antithesis (opposites together).  Look for more of this tension of opposites as you read.</p>
<h5>Assignment: Read Act III of <a href="https://www.litcharts.com/shakescleare/shakespeare-translations/romeo-and-juliet" target="_blank">Romeo &amp; Juliet</a> by William Shakespeare (original and modern text side by side)</h5>


<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://www.bard.org/study-guides/examining-the-text-romeo-and-juliet/" target="_blank">Figurative Language in <em>Romeo &amp; Juliet</em></a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-5--romeo-and-juliet/5-4-dualities-juxaposition-and-foils 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>5.4 Dualities, Juxaposition, and Foils</h2>
<div>
        
        
</div><div><div><div><h4>It's all about juxtaposition </h4>
<p>In the first lesson, we discussed some character <strong>foils</strong> in "Who's Who in Verona" (5.1).  In the previous lesson, "Figurative Language" (5.3), we discussed <strong>juxtaposition</strong>, <strong>antithesis</strong>, and <strong>oxymoron</strong>.
     All of these are known as <strong>dualities</strong>, two things that go together and show each other's similarities and contrasts.  Finish these dualities: "Peanut Butter and ________"; "Eggs and ______"; "Yin and ______"; "To be or _______";
    "Fact or _______".  As you know, great things come in pairs!  It's the cycle of life!</p>
<p>Shakespeare juxtaposes nearly every character, theme, and type of imagery in <em>Romeo &amp; Juliet</em>.  Let's review:</p>
<p>There's the <strong>Character Foils</strong> (reflections of each other):</p>

<ul>
    
<li><ul>
        <li><span>Romeo vs. Juliet ; Mercutio vs. Tybalt ; Friar Lawrence vs. Nurse </span></li>
    </ul></li></ul>

<p>But let's dig deeper into the main characters.  Consider these:</p>

<ul>
    
<li><ul>
        <li>Romeo vs. Friar Lawrence ; Romeo vs. Mercutio ; Juliet vs. the Nurse ; Juliet vs. her parents</li>
    </ul></li></ul>
<p>Now, let's look at duality in terms of <strong>themes</strong>:<br /></p><ul>
  
  
<li><ul><li>Love vs. hate ; fate vs. feud  marriage vs. death ; family vs. enemy ; social vs. individual ; peace vs. war</li>
</ul></li></ul>
And then, there's duality of <strong>imagery</strong>:<br />
<ul>
    <li><ul>
        <li>light vs. dark ; day vs. night ; religious vs. secular ; body vs. mind/heart/soul</li></ul></li></ul>Throughout the play, Shakespeare pairs and doubles not only his characters, but his settings, his moods, his tones, his themes, his imagery, and his action.  Overall, consider what characters know publicly and privately.  <br /><br />Act III
is the climax of the play, the highest point of action, a time when Romeo and Juliet should be happiest on their honeymoon.  Instead, they must be separated by violence.  Exile in a city-state, by the way, is not only getting kicked out of one's
country but getting kicked out of one's family.  It is like being ghosted or outcasted, a fate not unlike death to one's identity.   Get ready for more turns in Act IV!<br />
<div><br /></div>
<h3>Assignment: Read Act IV of <a href="https://www.litcharts.com/shakescleare/shakespeare-translations/romeo-and-juliet" target="_blank">Romeo &amp; Juliet</a> by William Shakespeare (original and modern text side by side)</h3>

<br />


<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://2019.playingshakespeare.org/language/love-and-hate-in-romeo-and-juliet/" target="_blank">Love and Hate in <em>Romeo &amp; Juliet</em></a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-5--romeo-and-juliet/5-5-types-of-irony 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>5.5 Types of Irony</h2>
<div>
        
        
</div><div><div><div><h4>Expect the Unexpected<br /></h4>
<p>It's funny that the concepts of both comedy and tragedy are both built around irony, that which is unexpected.   Mel Brooks famously said, "Tragedy is when <strong>I </strong>cut my finger.  Comedy is when <strong>you</strong> fall into an open
    sewer and die."  There's a fine line between the two, a matter of perspective.  Shakespeare is much more serious in his tragedy, as he begs the question: are love and death somehow ironically connected?  In fact, Shakespeare wrote a
    play similar to <em>Romeo and Julie</em>t called Much Ado About Nothing.  Instead of an accidental stabbing (like in Act III), the hero of <em>Much Ado</em> does resort to violence or revenge, and, in the end, he gets married and lives his best
    life, as is the ending of comedies.</p>
<p>To clarify, here are the major types of <strong>irony</strong>:</p>

<ul>
    
<li><ul>
        <li><strong>Verbal Irony</strong>: words said by a speaker who means just the opposite of what is said.</li>
        <li><strong>Sarcasm</strong>: words said by a speaker whose tone is nasty and who means just the opposite of what is said.</li>
        <li><strong>Hyperbole </strong> (also known as overstatement or exaggeration): words said by a speaker who exaggerates the meaning or importance of what is said.</li>
        <li><strong>Understatement</strong>: words said by a speaker who downplays or weakens the meaning or importance of what is said.</li>
        <li><strong>Situational Irony</strong>: an event or happening whose outcome is the very opposite of what is expected, beyond mere coincidence or chance.</li>
        <li><strong>Dramatic Irony</strong>: in a dramatic or fictional story, a major event known by the audience and certain members of the cast but largely unknown to a majority of the cast, so that, in the end, a dramatic outcome is unforeseen and irreversible.  </li>
    </ul></li></ul>

<p>So, obviously, a major event that we know about that others don't know about in Act II of <em>Romeo and Juliet</em> is the secret marriage.  Only Romeo, Juliet, the Friar, and the Nurse know about the wedding.  So, Tybalt and Mercutio do not
    realize that Romeo is now part of the Capulet family.  If they did know, would they have fought?  </p>
<p>Another major event of dramatic irony in Act IV is that of Juliet's secret fake potion.  Only she and Friar Lawrence know about it.  The circle of trust has grown even smaller.  Will Romeo find out in time?   </p>
<h3>Assignment: Read Act V of <a href="https://www.litcharts.com/shakescleare/shakespeare-translations/romeo-and-juliet" target="_blank">Romeo &amp; Juliet</a> by William Shakespeare (original and modern text side by side)</h3>



<div></div>
<div></div>
<div></div>

<h4>Reading:</h4>
<p><a href="https://myshakespeare.com/quick-study/romeo-and-juliet/act-5-scene-3" target="_blank">Act V, scene 3 character interviews from Shakespeare Company</a></p></div></div></div>
            </section>
        </div>"
`;

exports[`Canvas stimulus HTML generation renders HTML for unit-5--romeo-and-juliet/unit-5-study-guide 1`] = `
"<div id="region-main-box">
            <section id="region-main">
                
    <h2>Unit 5 Study Guide</h2>
<div>
        
        
        <div id="intro">
            <div><p>This study guide will help you preview the concepts and guide your learning as each new skill or concept is introduced. Use this study guide as the foundation of your notes. You may use it on the unit quizzes, unit tests, and course final.</p>


<p>Click on the link above, and make a copy of the file; you can open the document in Google docs. If you prefer to print it, it is available as a 
    <a href="https://svhs.co/pdf/English09-Part1_Unit5StudyGuide.pdf" target="_blank">PDF</a>.
</p></div>
        </div>
    </div><div><div>Click on <a href="https://docs.google.com/document/d/1HS9JhutdQjsrkRmOxUrBLXx7F17jJQBeN2iu9tII9EQ/copy">Unit 5 Study Guide</a> to open the resource.</div></div>
            </section>
        </div>"
`;
